<resources>
    <string name="app_name" translatable="false">Vibrator</string>
    <string name="app_version" translatable="false">Vibrator V%1$s</string>
    <string name="start_vibrate">Start</string>
    <string name="stop_vibrate">Stop</string>
    <string name="btn_exit">Exit</string>

    <string name="remote_start_vibrate">Start</string>
    <string name="remote_stop_vibrate">Stop</string>

    <string name="keep">continued</string>
    <string name="theme">Theme</string>
    <string name="remove_ad">Remove AD</string>
    <string name="discover">Discover</string>
    <string name="more">About</string>

    <string name="magenta">Purple</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Dark</string>

    <string name="not_allow">It is not allowed to switch themes during vibration</string>

    <string name="bottom_bar_left">FREQ</string>
    <string name="bottom_bar_right">High</string>

    <string name="close">Cancel</string>

    <string name="aboutDeveloper">Author: github @xiaofeidev</string>
    <string name="aboutXBB_Title">About this application:</string>

    <string name="aboutXBB_OpenSource">
         ▶ Click here to visit <a href="">APP source code</a>.
     </string>
    <string name="aboutXBB_ScoreAndFeedback">
         ▶ Click here to <a href="">Rate or Feedback</a>.
     </string>
    <string name="aboutXBB_Donate">
         ▶ You can also <a href="">donate</a> the author.
     </string>

    <string name="openSourceLink">https://github.com/xiaofeidev/Vibrator</string>
    <string name="donateToast">Thank you very much! The author\'s Alipay account (same as WeChat) has been copied to the clipboard</string>
    <string name="alipay" translatable="false">15853186920</string>

    <string name="about">About</string>

    <string name="quit_hint">Press it again to exit.</string>

    <string name="hint_keep">keep</string>

<!--    <string name="billing_connect_failed">Failed to connect to billing service, please try again.</string>-->

    <string name="banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id_release1" translatable="false">ca-app-pub-9708198084566779/3296344656</string>
    <string name="banner_id_release2" translatable="false">ca-app-pub-9708198084566779/1845577908</string>
    <string name="inter_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="inter_id_release1" translatable="false">ca-app-pub-9708198084566779/2826088592</string>
</resources>
