<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark">
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
          <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
              <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
     </com.google.android.material.appbar.AppBarLayout>

     <TextView
         android:id="@+id/textHint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:padding="20dp"
         android:text="@string/start_vibrate"
         android:textSize="25sp"
         android:textStyle="normal"
         android:typeface="monospace" />

     <FrameLayout
         android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
          <LinearLayout
              android:id="@+id/bottomBar"
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              android:padding="6dp"
              android:background="@color/translucent"
              tools:visibility="visible">
               <TextView
                   android:id="@+id/text1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:text="@string/bottom_bar_left"
                   android:paddingBottom="12dp"
                   android:paddingLeft="12dp"
                   android:paddingRight="12dp"
                   android:paddingTop="12dp"/>

               <SeekBar
                   android:id="@+id/seekBar"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:layout_weight="1"
                   android:paddingBottom="12dp"
                   android:paddingLeft="12dp"
                   android:paddingRight="12dp"
                   android:paddingTop="12dp"
                   android:max="40"/>

               <TextView
                   android:id="@+id/text2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:text="@string/bottom_bar_right"
                   android:paddingBottom="12dp"
                   android:paddingLeft="12dp"
                   android:paddingRight="12dp"
                   android:paddingTop="12dp"/>
          </LinearLayout>
     </FrameLayout>

     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/bottomLayout"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_id_release1"/>
</RelativeLayout>